--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
 <!-- End of  Zendesk Widget script -->
+    <link rel="icon" href="favicon.png" type="image.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yahoo Mail - Free Email Service with Unlimited Storage | Yahoo Mail Login</title>
