--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <link rel="icon" href="favicon.jpg" type="image.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yahoo Mail - Free Email Service with Unlimited Storage | Yahoo Mail Login</title>
-    <meta name="description" content="Learn how to use Yahoo Mail - free email service with unlimited storage. Get help with Yahoo Mail login account, customer support, and sign in issues.">
-    <meta name="keywords" content="yahoo mail, yahoo mail login account, yahoo mail login, yahoo mail customer support, yahoo mail customer service, yahoo mail sign in account, yahoo mail sign in">
-    <style>
-      <meta name="title" content="Yahoo Mail Login & Support – Secure Email for All Users">
+    <<meta name="title" content="Yahoo Mail Login & Support – Secure Email for All Users">
 <meta name="description" content="Complete guide to Yahoo Mail - free email service with 1TB storage. Learn about Yahoo Mail login, features, customer support, and how to sign in to your account.">
 <meta name="keywords" content="yahoo mail, yahoo mail login account, yahoo mail login, yahoo mail customer support, yahoo mail customer service, yahoo mail sign in account, yahoo mail sign in, free email service, webmail">
+    <style>
+      
         :root {
             --primary: #720e9e;
             --primary-light: #9b30ff;
